--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,5 +1,5 @@
 name: Build and Push Frontend Image
- 
+
 on:
   push:
     branches:
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set image tag
+        id: vars
+        run: |
+          echo "SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -21,8 +26,12 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend:latest ./src/frontend
+          docker build \
+            -t ${{ secrets.DOCKER_USERNAME }}/frontend:${{ env.SHORT_SHA }} \
+            -t ${{ secrets.DOCKER_USERNAME }}/frontend:latest \
+            ./src/frontend
 
       - name: Push Docker image
         run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/frontend:${{ env.SHORT_SHA }}
           docker push ${{ secrets.DOCKER_USERNAME }}/frontend:latest
