--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -40,12 +40,15 @@ jobs:
 
       - name: Build Docker image
         run: |
+          DOCKERFILE_PATH="./src/${{ matrix.service }}/Dockerfile"
+
+          if [ ! -f "$DOCKERFILE_PATH" ]; then
+            DOCKERFILE_PATH="./src/${{ matrix.service }}/src/Dockerfile"
+          fi
+
           docker build \
+            -f $DOCKERFILE_PATH \
             -t ${{ secrets.DOCKER_USERNAME }}/${{ matrix.service }}:${{ env.SHORT_SHA }} \
             -t ${{ secrets.DOCKER_USERNAME }}/${{ matrix.service }}:latest \
             ./src/${{ matrix.service }}
 
-      - name: Push Docker image
-        run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{ matrix.service }}:${{ env.SHORT_SHA }}
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{ matrix.service }}:latest
